# multigrep

./: .dockerignore  Cargo.toml  Dockerfile
samples/: log4j_1.txt
src/: main.rs
