[package]
name = "multigrep"
version = "0.1.0"
authors = ["Tyler Boyd <tyler.boyd@traderev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
tokio = { version = "0.2", features = ["full"] }
regex = "1"
